The locking state of MODIS can now be shared as hash. Fixed a date text bug in Landsat UI on Firefox. Fixed a hovering effect bug in the presentation slider on IE 10.

--- a/css/customUI.css
+++ b/css/customUI.css
@@ -293,14 +293,14 @@
 
 .timeText {
   position: absolute;
-  width: 85px;
-  height: 26px;
+  width: 60px;
+  height: 21px;
   font-size: 16pt;
   box-shadow: 2px 2px 3px rgba(0,0,0,0.3);
   font-family: Arial, Helvetica, sans-serif;
-  text-align: right;
   padding-top: 5px;
-  padding-right: 12px;
+  padding-bottom: 5px;
+  padding-left: 37px;
   color: #656565;
   font-weight: normal;
   background-color: white;
